testsuite/escript/errors/errors003-function-parameter-same-name-as-function.err1
Variable not_defined has not been declared on line 3.
